fix vector card text overflow

--- a/projects/demo/src/app/user/vectors/components/vector-card/vector-card.component.scss
+++ b/projects/demo/src/app/user/vectors/components/vector-card/vector-card.component.scss
@@ -18,4 +18,5 @@ mat-card-title a {
   max-height: 1.8em;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
